fixed overflow issue study notes

--- a/Frontend/src/components/StudyNote.css
+++ b/Frontend/src/components/StudyNote.css
@@ -66,6 +66,7 @@
   -moz-transition:-moz-transform .15s linear;
   -o-transition:-o-transform .15s linear;
   -webkit-transition:-webkit-transform .15s linear;
+  overflow-wrap: break-word;
 }
 
  #study-note-list .study-note-card:nth-child(even){
